@@ -39,7 +39,8 @@ public class PathSegmentsHttpRequestTest extends TestCase {
     }
     
     public void testGeneral() throws Exception {
-        HttpRequestContext r = new HttpRequestContextImpl("GET", "/p1;x=1;y=1/p2;x=2;y=2/p3;x=3;y=3", "/context", null, null) {};
+        HttpRequestContext r = new TestHttpRequestContext("GET", null,
+                "/context/p1;x=1;y=1/p2;x=2;y=2/p3;x=3;y=3", "/context", "p1;x=1;y=1/p2;x=2;y=2/p3;x=3;y=3");
         List<PathSegment> segments = r.getURIPathSegments();
         
         assertEquals(3, segments.size());
@@ -64,7 +65,8 @@ public class PathSegmentsHttpRequestTest extends TestCase {
     }
     
     public void testMultipleSlash() throws Exception {
-        HttpRequestContext r = new HttpRequestContextImpl("GET", "//p//p//p//", "/context", null, null) {};
+        HttpRequestContext r = new TestHttpRequestContext("GET", null,
+                "/context/p//p//p//", "/context", "p//p//p//");
         List<PathSegment> segments = r.getURIPathSegments();
         
         assertEquals(3, segments.size());
@@ -75,7 +77,8 @@ public class PathSegmentsHttpRequestTest extends TestCase {
     }
     
     public void testMultipleMatrixParams() throws Exception {
-        HttpRequestContext r = new HttpRequestContextImpl("GET", "/p;x=1;x=2;x=3", "/context", null, null) {};
+        HttpRequestContext r = new TestHttpRequestContext("GET", null,
+                "/context/p;x=1;x=2;x=3", "/context", "p;x=1;x=2;x=3");
         List<PathSegment> segments = r.getURIPathSegments();
         
         MultivaluedMap<String, String> m = segments.get(0).getMatrixParameters();        
@@ -87,7 +90,8 @@ public class PathSegmentsHttpRequestTest extends TestCase {
     }
 
     public void testEmptyPathSegmentsWithMultipleMatrixParams() throws Exception {
-        HttpRequestContext r = new HttpRequestContextImpl("GET", "/;x=1;y=1/;x=2;y=2/;x=3;y=3", "/context", null, null) {};
+        HttpRequestContext r = new TestHttpRequestContext("GET", null,
+                "/context/;x=1;y=1/;x=2;y=2/;x=3;y=3", "/context", ";x=1;y=1/;x=2;y=2/;x=3;y=3");
         List<PathSegment> segments = r.getURIPathSegments();
         
         assertEquals(3, segments.size());
