@@ -37,7 +37,8 @@ public class QueryParametersHttpRequestTest extends TestCase {
     }
     
     public void testGeneral() throws Exception {
-        HttpRequestContext r = new HttpRequestContextImpl("GET", "/widgets/10", "/context", "verbose=true&item=1&item=2", null) {};
+        HttpRequestContext r = new TestHttpRequestContext("GET", null,
+                "/context/widgets/10?verbose=true&item=1&item=2", "/context", "widgets/10");
         MultivaluedMap<String, String> p = r.getQueryParameters();
         assertEquals(p.get("verbose").size(), 1);
         assertEquals(p.getFirst("verbose"),"true");
@@ -48,31 +49,36 @@ public class QueryParametersHttpRequestTest extends TestCase {
     }
     
     public void testEmpty() throws Exception {
-        HttpRequestContext r = new HttpRequestContextImpl("GET", "/widgets/10", "/context", "", null) {};
+        HttpRequestContext r = new TestHttpRequestContext("GET", null,
+                "/context/widgets/10", "/context", "widgets/10");
         MultivaluedMap<String, String> p = r.getQueryParameters();
         assertEquals(p.size(),0);
     }
     
     public void testSingleAmpersand() throws Exception {
-        HttpRequestContext r = new HttpRequestContextImpl("GET", "/widgets/10", "/context", "&", null) {};
+        HttpRequestContext r = new TestHttpRequestContext("GET", null,
+                "/context/widgets/10?&", "/context", "widgets/10");
         MultivaluedMap<String, String> p = r.getQueryParameters();
         assertEquals(p.size(),0);
     }
     
     public void testMultipleAmpersand() throws Exception {
-        HttpRequestContext r = new HttpRequestContextImpl("GET", "/widgets/10", "/context", "&& = &&&", null) {};
+        HttpRequestContext r = new TestHttpRequestContext("GET", null,
+                "/context/widgets/10?&&%20=%20&&&", "/context", "widgets/10");
         MultivaluedMap<String, String> p = r.getQueryParameters();
         assertEquals(p.size(),1);
     }
     
     public void testInterspersedAmpersand() throws Exception {
-        HttpRequestContext r = new HttpRequestContextImpl("GET", "/widgets/10", "/context", "a=1&&b=2", null) {};
+        HttpRequestContext r = new TestHttpRequestContext("GET", null,
+                "/context/widgets/10?a=1&&b=2", "/context", "widgets/10");
         MultivaluedMap<String, String> p = r.getQueryParameters();
         assertEquals(p.size(),2);
     }
     
     public void testEmptyValues() throws Exception {
-        HttpRequestContext r = new HttpRequestContextImpl("GET", "/widgets/10", "/context", "one&two&three", null) {};
+        HttpRequestContext r = new TestHttpRequestContext("GET", null,
+                "/context/widgets/10?one&two&three", "/context", "widgets/10");
         MultivaluedMap<String, String> p = r.getQueryParameters();
         assertEquals(p.getFirst("one"),"");
         assertEquals(p.getFirst("two"),"");
@@ -80,7 +86,8 @@ public class QueryParametersHttpRequestTest extends TestCase {
     }
     
     public void testMultipleEmptyValues() throws Exception {
-        HttpRequestContext r = new HttpRequestContextImpl("GET", "/widgets/10", "/context", "one&one&one", null) {};
+        HttpRequestContext r = new TestHttpRequestContext("GET", null,
+                "/context/widgets/10?one&one&one", "/context", "widgets/10");
         MultivaluedMap<String, String> p = r.getQueryParameters();
         assertEquals(p.get("one").size(), 3);
         assertEquals(p.get("one").get(0),"");
@@ -89,36 +96,42 @@ public class QueryParametersHttpRequestTest extends TestCase {
     }
     
     public void testWhiteSpace() throws Exception {
-        HttpRequestContext r = new HttpRequestContextImpl("GET", "/widgets/10", "/context", "x+=+1%20&%20y+=+2", null) {};
+        HttpRequestContext r = new TestHttpRequestContext("GET", null,
+                "/context/widgets/10?x+=+1%20&%20y+=+2", "/context", "widgets/10");
         MultivaluedMap<String, String> p = r.getQueryParameters();
         assertEquals(p.getFirst("x "), " 1 ");
         assertEquals(p.getFirst(" y "), " 2");
     }
     
     public void testDecoded() throws Exception {
-        HttpRequestContext r = new HttpRequestContextImpl("GET", "/widgets/10", "/context", "x+=+1%20&%20y+=+2", null) {};
+        HttpRequestContext r = new TestHttpRequestContext("GET", null,
+                "/context/widgets/10?x+=+1%20&%20y+=+2", "/context", "widgets/10");
         MultivaluedMap<String, String> p = r.getQueryParameters(true);
         assertEquals(" 1 ", p.getFirst("x "));
         assertEquals(" 2", p.getFirst(" y "));
         
-        r = new HttpRequestContextImpl("GET", "/widgets/10", "/context", "x=1&y=1+%2B+2", null) {};
+        r = new TestHttpRequestContext("GET", null,
+                "/context/widgets/10?x=1&y=1+%2B+2", "/context", "widgets/10");
         p = r.getQueryParameters(true);
         assertEquals("1", p.getFirst("x"));
         assertEquals("1 + 2", p.getFirst("y"));
         
-        r = new HttpRequestContextImpl("GET", "/widgets/10", "/context", "x=1&y=1+%26+2", null) {};
+        r = new TestHttpRequestContext("GET", null,
+                "/context/widgets/10?x=1&y=1+%26+2", "/context", "widgets/10");
         p = r.getQueryParameters(true);
         assertEquals("1", p.getFirst("x"));
         assertEquals("1 & 2", p.getFirst("y"));
         
-        r = new HttpRequestContextImpl("GET", "/widgets/10", "/context", "x=1&y=1+%7C%7C+2", null) {};
+        r = new TestHttpRequestContext("GET", null,
+                "/context/widgets/10?x=1&y=1+%7C%7C+2", "/context", "widgets/10");
         p = r.getQueryParameters(true);
         assertEquals("1", p.getFirst("x"));
         assertEquals("1 || 2", p.getFirst("y"));
     }
         
     public void testEncoded() throws Exception {
-        HttpRequestContext r = new HttpRequestContextImpl("GET", "/widgets/10", "/context", "x+=+1%20&%20y+=+2", null) {};
+        HttpRequestContext r = new TestHttpRequestContext("GET", null,
+                "/context/widgets/10?x+=+1%20&%20y+=+2", "/context", "widgets/10");
         MultivaluedMap<String, String> p = r.getQueryParameters(false);
         assertEquals("+1%20", p.getFirst("x+"));
         assertEquals("+2", p.getFirst("%20y+"));
